Add and fix things in both files
add mfcc_delta and mfcc_delta2 to feature select
add professor to loaded data
update project_emotions so it has the same things as words file

--- a/project.ipynb
+++ b/project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -186,27 +186,22 @@
    ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(feature_vector, labels, test_size=0.6, random_state=42)\n",
-    "# Normalize the features\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Train the SVM\n",
     "svm = SVC(kernel='rbf', C=1.0, random_state=42)\n",
     "svm.fit(X_train, y_train)\n",
-    "\n",
     "y_pred = svm.predict(X_test)\n",
     "\n",
-    "# Accuracy\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "# Detailed classification report\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -221,10 +216,9 @@
     }
    ],
    "source": [
-    "# Create a confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "ticks = [\"Filip\",\"Sebastian\",\"Marcin\",\"Łazoryszczak\"]\n",
-    "# Plot the confusion matrix\n",
+    "\n",
     "sns.heatmap(cm, annot=True,fmt='d', cmap='YlGnBu',xticklabels=ticks, yticklabels=ticks )\n",
     "plt.ylabel('Prediction',fontsize=12)\n",
     "plt.xlabel('Actual',fontsize=12)\n",
@@ -241,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -264,23 +258,19 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_clf.fit(X_train, y_train)\n",
     "\n",
     "y_pred = rf_clf.predict(X_test)\n",
     "\n",
-    "# Accuracy\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "\n",
-    "# Detailed classification report\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -295,10 +285,9 @@
     }
    ],
    "source": [
-    "# Create a confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "ticks = [\"Filip\",\"Sebastian\",\"Marcin\",\"Łazoryszczak\"]\n",
-    "# Plot the confusion matrix\n",
+    "\n",
     "sns.heatmap(cm, annot=True,fmt='d', cmap='YlGnBu',xticklabels=ticks, yticklabels=ticks )\n",
     "plt.ylabel('Prediction',fontsize=12)\n",
     "plt.xlabel('Actual',fontsize=12)\n",
@@ -315,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -339,20 +328,18 @@
     }
    ],
    "source": [
-    "# Step 3: Train the Multilayer Perceptron Classifier\n",
     "mlp_clf = MLPClassifier(hidden_layer_sizes=(100, 100,100), activation='relu', solver='adam', \n",
     "                         max_iter=2000, random_state=42)\n",
     "mlp_clf.fit(X_train, y_train)\n",
-    "\n",
-    "# Step 4: Evaluate the MLP Classifier\n",
     "mlp_pred = mlp_clf.predict(X_test)\n",
+    "\n",
     "print(\"MLP Accuracy:\", accuracy_score(y_test, mlp_pred))\n",
     "print(\"MLP Classification Report:\\n\", classification_report(y_test, mlp_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -367,10 +354,9 @@
     }
    ],
    "source": [
-    "# Create a confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "ticks = [\"Filip\",\"Sebastian\",\"Marcin\",\"Łazoryszczak\"]\n",
-    "# Plot the confusion matrix\n",
+    "\n",
     "sns.heatmap(cm, annot=True,fmt='d', cmap='YlGnBu',xticklabels=ticks, yticklabels=ticks )\n",
     "plt.ylabel('Prediction',fontsize=12)\n",
     "plt.xlabel('Actual',fontsize=12)\n",
@@ -388,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -469,27 +455,22 @@
    ],
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(feature_vector, labels, test_size=0.5, random_state=42)\n",
-    "# Normalize the features\n",
+    "\n",
     "scaler = StandardScaler()\n",
     "X_train = scaler.fit_transform(X_train)\n",
     "X_test = scaler.transform(X_test)\n",
     "\n",
-    "# Train the SVM\n",
     "svm = SVC(kernel='rbf', C=1.0, random_state=42)\n",
     "svm.fit(X_train, y_train)\n",
-    "\n",
     "y_pred = svm.predict(X_test)\n",
     "\n",
-    "# Accuracy\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "# Detailed classification report\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -504,10 +485,9 @@
     }
    ],
    "source": [
-    "# Create a confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "ticks = [\"Filip\",\"Sebastian\",\"Marcin\",\"Łazoryszczak\"]\n",
-    "# Plot the confusion matrix\n",
+    "\n",
     "sns.heatmap(cm, annot=True,fmt='d', cmap='YlGnBu',xticklabels=ticks, yticklabels=ticks )\n",
     "plt.ylabel('Prediction',fontsize=12)\n",
     "plt.xlabel('Actual',fontsize=12)\n",
@@ -524,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -549,19 +529,15 @@
    "source": [
     "rf_clf = RandomForestClassifier(n_estimators=100, random_state=42)\n",
     "rf_clf.fit(X_train, y_train)\n",
-    "\n",
     "y_pred = rf_clf.predict(X_test)\n",
     "\n",
-    "# Accuracy\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "# Detailed classification report\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -576,10 +552,9 @@
     }
    ],
    "source": [
-    "# Create a confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "ticks = [\"Filip\",\"Sebastian\",\"Marcin\",\"Łazoryszczak\"]\n",
-    "# Plot the confusion matrix\n",
+    "\n",
     "sns.heatmap(cm, annot=True,fmt='d', cmap='YlGnBu',xticklabels=ticks, yticklabels=ticks )\n",
     "plt.ylabel('Prediction',fontsize=12)\n",
     "plt.xlabel('Actual',fontsize=12)\n",
@@ -596,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -620,20 +595,18 @@
     }
    ],
    "source": [
-    "# Step 3: Train the Multilayer Perceptron Classifier\n",
     "mlp_clf = MLPClassifier(hidden_layer_sizes=(100,100,100,20), activation='relu', solver='adam', \n",
     "                         max_iter=3000, random_state=42)\n",
     "mlp_clf.fit(X_train, y_train)\n",
-    "\n",
-    "# Step 4: Evaluate the MLP Classifier\n",
     "mlp_pred = mlp_clf.predict(X_test)\n",
+    "\n",
     "print(\"MLP Accuracy:\", accuracy_score(y_test, mlp_pred))\n",
     "print(\"MLP Classification Report:\\n\", classification_report(y_test, mlp_pred))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -648,10 +621,9 @@
     }
    ],
    "source": [
-    "# Create a confusion matrix\n",
     "cm = confusion_matrix(y_test, y_pred)\n",
     "ticks = [\"Filip\",\"Sebastian\",\"Marcin\",\"Łazoryszczak\"]\n",
-    "# Plot the confusion matrix\n",
+    "\n",
     "sns.heatmap(cm, annot=True,fmt='d', cmap='YlGnBu',xticklabels=ticks, yticklabels=ticks )\n",
     "plt.ylabel('Prediction',fontsize=12)\n",
     "plt.xlabel('Actual',fontsize=12)\n",
@@ -669,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -697,15 +669,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\n",
-      "(120, 650)\n"
+      "(120, 1950)\n"
      ]
     }
    ],
@@ -756,10 +727,26 @@
     "mfcc_prof_final = flatten_features(mfcc_prof, no_of_words, mfcc_features_no,least_to_take)\n",
     "\n",
     "\n",
-    "print()\n",
+    "mfcc_delta_filip_final = flatten_features(mfcc_delta_filip, no_of_words, mfcc_features_no,least_to_take)\n",
+    "mfcc_delta_seb_final = flatten_features(mfcc_delta_seb, no_of_words, mfcc_features_no,least_to_take)\n",
+    "mfcc_delta_marcin_final = flatten_features(mfcc_delta_marcin, no_of_words, mfcc_features_no,least_to_take)\n",
+    "mfcc_delta_prof_final = flatten_features(mfcc_delta_prof, no_of_words, mfcc_features_no,least_to_take)\n",
+    "\n",
+    "mfcc_delta2_filip_final = flatten_features(mfcc_delta2_filip, no_of_words, mfcc_features_no,least_to_take)\n",
+    "mfcc_delta2_seb_final = flatten_features(mfcc_delta2_seb, no_of_words, mfcc_features_no,least_to_take)\n",
+    "mfcc_delta2_marcin_final = flatten_features(mfcc_delta2_marcin, no_of_words, mfcc_features_no,least_to_take)\n",
+    "mfcc_delta2_prof_final = flatten_features(mfcc_delta2_prof, no_of_words, mfcc_features_no,least_to_take)\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "feature_vector_mfcc = np.concatenate((mfcc_filip_final, mfcc_seb_final,mfcc_marcin_final,mfcc_prof_final))\n",
-    "#Teraz cechy są (30,650)\n",
-    "# a feature vector jest (90,650).\n",
+    "feature_vector_mfcc_delta = np.concatenate((mfcc_delta_filip_final, mfcc_delta_seb_final,mfcc_delta_marcin_final,mfcc_delta_prof_final))\n",
+    "feature_vector_mfcc_delta2 = np.concatenate((mfcc_delta2_filip_final, mfcc_delta2_seb_final,mfcc_delta2_marcin_final,mfcc_delta2_prof_final))\n",
+    "\n",
+    "feature_vector_mfcc = np.concatenate((feature_vector_mfcc, feature_vector_mfcc_delta,feature_vector_mfcc_delta2), axis=1)\n",
     "print(feature_vector_mfcc.shape)"
    ]
   },
@@ -779,25 +766,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(96, 300) (24, 300)\n",
       "Accuracy: 0.7083333333333334\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "         0.0       0.50      0.83      0.62         6\n",
-      "         1.0       1.00      0.29      0.44         7\n",
-      "         2.0       0.75      0.86      0.80         7\n",
+      "         1.0       0.75      0.43      0.55         7\n",
+      "         2.0       0.83      0.71      0.77         7\n",
       "         3.0       1.00      1.00      1.00         4\n",
       "\n",
       "    accuracy                           0.71        24\n",
-      "   macro avg       0.81      0.74      0.72        24\n",
-      "weighted avg       0.80      0.71      0.69        24\n",
+      "   macro avg       0.77      0.74      0.73        24\n",
+      "weighted avg       0.75      0.71      0.71        24\n",
       "\n"
      ]
     }
@@ -805,27 +791,21 @@
    "source": [
     "X_train, X_test, y_train, y_test = train_test_split(feature_vector_mfcc, labels, test_size=0.2, random_state=42)\n",
     "\n",
-    "selector = SelectKBest(score_func=f_classif, k=300)  \n",
+    "selector = SelectKBest(score_func=f_classif, k=1950)  \n",
     "X_train_selected = selector.fit_transform(X_train, y_train)  \n",
     "X_test_selected = selector.transform(X_test)  \n",
     "\n",
-    "print(X_train_selected.shape, X_test_selected.shape)\n",
-    "\n",
-    "# Normalize the features\n",
     "scaler = StandardScaler()\n",
     "X_train_selected = scaler.fit_transform(X_train_selected)\n",
     "X_test_selected = scaler.transform(X_test_selected)\n",
     "\n",
-    "# Train the SVM\n",
+    "\n",
     "svm = SVC(kernel='sigmoid', C=1.0, random_state=42)\n",
     "svm.fit(X_train_selected, y_train)\n",
-    "\n",
     "y_pred = svm.predict(X_test_selected)\n",
     "\n",
-    "# Accuracy\n",
-    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "\n",
-    "# Detailed classification report\n",
+    "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
@@ -838,9 +818,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(120, 500)\n"
+     ]
+    }
+   ],
    "source": [
     "spectral_features_no = 4\n",
     "\n",
@@ -893,19 +881,19 @@
     "spectral_marcin_final = flatten_features(spectral_features_marcin, no_of_words, 10, least_to_take)\n",
     "spectral_prof_final = flatten_features(spectral_features_prof, no_of_words, 10, least_to_take)\n",
     "\n",
-    "feature_vector_spec = np.concatenate((spectral_filip_final, spectral_seb_final,spectral_marcin_final,spectral_prof_final))"
+    "feature_vector_spec = np.concatenate((spectral_filip_final, spectral_seb_final,spectral_marcin_final,spectral_prof_final))\n",
+    "print(feature_vector_spec.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(96, 400) (24, 400)\n",
       "Accuracy: 0.6666666666666666\n",
       "              precision    recall  f1-score   support\n",
       "\n",
@@ -922,30 +910,21 @@
     }
    ],
    "source": [
-    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(feature_vector_spec, labels, test_size=0.2, random_state=42)\n",
     "\n",
     "selector = SelectKBest(score_func=f_classif, k=400)  \n",
     "X_train_selected = selector.fit_transform(X_train, y_train)  \n",
     "X_test_selected = selector.transform(X_test)  \n",
     "\n",
-    "print(X_train_selected.shape, X_test_selected.shape)\n",
-    "\n",
-    "# Normalize the features\n",
     "scaler = StandardScaler()\n",
     "X_train_selected = scaler.fit_transform(X_train_selected)\n",
     "X_test_selected = scaler.transform(X_test_selected)\n",
     "\n",
-    "# Train the SVM\n",
     "svm = SVC(kernel='sigmoid', C=1.0, random_state=42)\n",
     "svm.fit(X_train_selected, y_train)\n",
-    "\n",
     "y_pred = svm.predict(X_test_selected)\n",
     "\n",
-    "# Accuracy\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "# Detailed classification report\n",
     "print(classification_report(y_test, y_pred))"
    ]
   },
@@ -958,54 +937,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(96, 500) (24, 500)\n",
-      "Accuracy: 0.7916666666666666\n",
+      "Accuracy: 0.875\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.60      1.00      0.75         6\n",
-      "         1.0       0.80      0.57      0.67         7\n",
-      "         2.0       1.00      0.71      0.83         7\n",
+      "         0.0       0.67      1.00      0.80         6\n",
+      "         1.0       1.00      0.57      0.73         7\n",
+      "         2.0       1.00      1.00      1.00         7\n",
       "         3.0       1.00      1.00      1.00         4\n",
       "\n",
-      "    accuracy                           0.79        24\n",
-      "   macro avg       0.85      0.82      0.81        24\n",
-      "weighted avg       0.84      0.79      0.79        24\n",
+      "    accuracy                           0.88        24\n",
+      "   macro avg       0.92      0.89      0.88        24\n",
+      "weighted avg       0.92      0.88      0.87        24\n",
       "\n"
      ]
     }
    ],
    "source": [
     "feature_vector = np.concatenate((feature_vector_mfcc, feature_vector_spec), axis=1)\n",
+    "\n",
     "X_train, X_test, y_train, y_test = train_test_split(feature_vector, labels, test_size=0.2, random_state=42)\n",
     "\n",
-    "selector = SelectKBest(score_func=f_classif, k=500)  \n",
+    "selector = SelectKBest(score_func=f_classif, k=2000)  \n",
     "X_train_selected = selector.fit_transform(X_train, y_train)  \n",
     "X_test_selected = selector.transform(X_test)  \n",
     "\n",
-    "print(X_train_selected.shape, X_test_selected.shape)\n",
-    "\n",
-    "# Normalize the features\n",
     "scaler = StandardScaler()\n",
     "X_train_selected = scaler.fit_transform(X_train_selected)\n",
     "X_test_selected = scaler.transform(X_test_selected)\n",
     "\n",
-    "# Train the SVM\n",
     "svm = SVC(kernel='linear', C=1.0, random_state=42)\n",
     "svm.fit(X_train_selected, y_train)\n",
-    "\n",
     "y_pred = svm.predict(X_test_selected)\n",
     "\n",
-    "# Accuracy\n",
     "print(\"Accuracy:\", accuracy_score(y_test, y_pred))\n",
-    "\n",
-    "# Detailed classification report\n",
     "print(classification_report(y_test, y_pred))"
    ]
   }
