--- a/project.ipynb
+++ b/project.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:01.427336Z",
-     "start_time": "2025-01-14T19:20:01.415106Z"
+     "end_time": "2025-01-14T19:38:17.222746Z",
+     "start_time": "2025-01-14T19:38:17.016691Z"
     }
    },
    "outputs": [],
@@ -34,11 +34,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:01.649974Z",
-     "start_time": "2025-01-14T19:20:01.608969Z"
+     "end_time": "2025-01-14T19:38:18.096757Z",
+     "start_time": "2025-01-14T19:38:17.223747Z"
     }
    },
    "outputs": [],
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.093315Z",
-     "start_time": "2025-01-14T19:20:01.651975Z"
+     "end_time": "2025-01-14T19:38:18.541487Z",
+     "start_time": "2025-01-14T19:38:18.097757Z"
     }
    },
    "outputs": [],
@@ -152,11 +152,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.108317Z",
-     "start_time": "2025-01-14T19:20:02.094316Z"
+     "end_time": "2025-01-14T19:38:18.556925Z",
+     "start_time": "2025-01-14T19:38:18.542488Z"
     }
    },
    "outputs": [],
@@ -182,11 +182,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.124315Z",
-     "start_time": "2025-01-14T19:20:02.109318Z"
+     "end_time": "2025-01-14T19:38:18.572924Z",
+     "start_time": "2025-01-14T19:38:18.557925Z"
     }
    },
    "outputs": [
@@ -225,11 +225,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.249475Z",
-     "start_time": "2025-01-14T19:20:02.125316Z"
+     "end_time": "2025-01-14T19:38:18.760949Z",
+     "start_time": "2025-01-14T19:38:18.573925Z"
     }
    },
    "outputs": [
@@ -262,11 +262,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.344137Z",
-     "start_time": "2025-01-14T19:20:02.251477Z"
+     "end_time": "2025-01-14T19:38:18.856462Z",
+     "start_time": "2025-01-14T19:38:18.761951Z"
     }
    },
    "outputs": [
@@ -301,11 +301,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.455876Z",
-     "start_time": "2025-01-14T19:20:02.345137Z"
+     "end_time": "2025-01-14T19:38:18.967694Z",
+     "start_time": "2025-01-14T19:38:18.858462Z"
     }
    },
    "outputs": [
@@ -338,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.567119Z",
-     "start_time": "2025-01-14T19:20:02.456876Z"
+     "end_time": "2025-01-14T19:38:19.078718Z",
+     "start_time": "2025-01-14T19:38:18.968693Z"
     }
    },
    "outputs": [
@@ -377,11 +377,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:02.678183Z",
-     "start_time": "2025-01-14T19:20:02.569122Z"
+     "end_time": "2025-01-14T19:38:19.189985Z",
+     "start_time": "2025-01-14T19:38:19.079719Z"
     }
    },
    "outputs": [
@@ -415,11 +415,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:04.136902Z",
-     "start_time": "2025-01-14T19:20:02.679184Z"
+     "end_time": "2025-01-14T19:38:20.333624Z",
+     "start_time": "2025-01-14T19:38:19.190984Z"
     }
    },
    "outputs": [],
@@ -477,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:04.152391Z",
-     "start_time": "2025-01-14T19:20:04.137903Z"
+     "end_time": "2025-01-14T19:38:20.349403Z",
+     "start_time": "2025-01-14T19:38:20.334625Z"
     }
    },
    "outputs": [
@@ -520,11 +520,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:04.263747Z",
-     "start_time": "2025-01-14T19:20:04.153391Z"
+     "end_time": "2025-01-14T19:38:20.460502Z",
+     "start_time": "2025-01-14T19:38:20.350404Z"
     }
    },
    "outputs": [
@@ -557,11 +557,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:04.359814Z",
-     "start_time": "2025-01-14T19:20:04.264747Z"
+     "end_time": "2025-01-14T19:38:20.556534Z",
+     "start_time": "2025-01-14T19:38:20.461502Z"
     }
    },
    "outputs": [
@@ -594,11 +594,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:04.469592Z",
-     "start_time": "2025-01-14T19:20:04.360815Z"
+     "end_time": "2025-01-14T19:38:20.668041Z",
+     "start_time": "2025-01-14T19:38:20.557535Z"
     }
    },
    "outputs": [
@@ -631,11 +631,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:04.898730Z",
-     "start_time": "2025-01-14T19:20:04.471591Z"
+     "end_time": "2025-01-14T19:38:21.079787Z",
+     "start_time": "2025-01-14T19:38:20.669042Z"
     }
    },
    "outputs": [
@@ -670,11 +670,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:05.009784Z",
-     "start_time": "2025-01-14T19:20:04.899730Z"
+     "end_time": "2025-01-14T19:38:21.188844Z",
+     "start_time": "2025-01-14T19:38:21.080787Z"
     }
    },
    "outputs": [
@@ -708,11 +708,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:05.025783Z",
-     "start_time": "2025-01-14T19:20:05.010784Z"
+     "end_time": "2025-01-14T19:38:21.204844Z",
+     "start_time": "2025-01-14T19:38:21.189844Z"
     }
    },
    "outputs": [],
@@ -741,11 +741,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:05.452096Z",
-     "start_time": "2025-01-14T19:20:05.026784Z"
+     "end_time": "2025-01-14T19:38:21.616888Z",
+     "start_time": "2025-01-14T19:38:21.205843Z"
     }
    },
    "outputs": [
@@ -843,11 +843,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:05.483931Z",
-     "start_time": "2025-01-14T19:20:05.454099Z"
+     "end_time": "2025-01-14T19:38:21.647432Z",
+     "start_time": "2025-01-14T19:38:21.617888Z"
     }
    },
    "outputs": [
@@ -899,11 +899,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:09.489113Z",
-     "start_time": "2025-01-14T19:20:05.484931Z"
+     "end_time": "2025-01-14T19:38:25.498273Z",
+     "start_time": "2025-01-14T19:38:21.648433Z"
     }
    },
    "outputs": [
@@ -973,11 +973,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:09.505109Z",
-     "start_time": "2025-01-14T19:20:09.490112Z"
+     "end_time": "2025-01-14T19:38:25.513472Z",
+     "start_time": "2025-01-14T19:38:25.499273Z"
     }
    },
    "outputs": [
@@ -1027,11 +1027,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:09.537112Z",
-     "start_time": "2025-01-14T19:20:09.506112Z"
+     "end_time": "2025-01-14T19:38:25.545475Z",
+     "start_time": "2025-01-14T19:38:25.514472Z"
     }
    },
    "outputs": [
@@ -1133,11 +1133,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:26.099852Z",
-     "start_time": "2025-01-14T19:20:26.012819Z"
+     "end_time": "2025-01-14T19:41:29.588298Z",
+     "start_time": "2025-01-14T19:41:29.492299Z"
     }
    },
-   "execution_count": 179
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -1155,17 +1155,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVM Accuracy: 0.2833333333333333\n",
+      "SVM Accuracy: 0.3\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "         0.0       0.27      0.47      0.34        15\n",
-      "         1.0       1.00      0.00      0.00        14\n",
-      "         2.0       1.00      0.00      0.00        16\n",
-      "         3.0       0.29      0.67      0.41        15\n",
+      "         0.0       0.25      0.53      0.34        15\n",
+      "         1.0       0.33      0.36      0.34        14\n",
+      "         2.0       0.20      0.12      0.15        16\n",
+      "         3.0       1.00      0.20      0.33        15\n",
       "\n",
-      "    accuracy                           0.28        60\n",
-      "   macro avg       0.64      0.28      0.19        60\n",
-      "weighted avg       0.64      0.28      0.19        60\n"
+      "    accuracy                           0.30        60\n",
+      "   macro avg       0.45      0.30      0.29        60\n",
+      "weighted avg       0.44      0.30      0.29        60\n"
      ]
     },
     {
@@ -1181,12 +1181,12 @@
     "svm = SVC(kernel='rbf', C=1.0, random_state=42)\n",
     "svm.fit(X_train, y_train)\n",
     "\n",
-    "y_pred = svm.predict(X_test)\n",
+    "y_pred_svm = svm.predict(X_test)\n",
     "\n",
     "print(\"SVM Accuracy:\", accuracy_score(y_test, y_pred_svm))\n",
     "print(classification_report(y_test, y_pred_svm, zero_division=1))\n",
     "\n",
-    "cm_svm = confusion_matrix(y_test, y_pred)\n",
+    "cm_svm = confusion_matrix(y_test, y_pred_svm)\n",
     "ticks = [\"Filip\", \"Sebastian\", \"Marcin\", \"Łazoryszczak\"]\n",
     "\n",
     "sns.heatmap(cm_svm, annot=True, fmt='d', cmap='YlGnBu', xticklabels=ticks, yticklabels=ticks)\n",
@@ -1198,11 +1198,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:26.684117Z",
-     "start_time": "2025-01-14T19:20:26.580592Z"
+     "end_time": "2025-01-14T19:41:30.189020Z",
+     "start_time": "2025-01-14T19:41:30.074508Z"
     }
    },
-   "execution_count": 180
+   "execution_count": 32
   },
   {
    "cell_type": "markdown",
@@ -1262,11 +1262,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:28.862724Z",
-     "start_time": "2025-01-14T19:20:28.673701Z"
+     "end_time": "2025-01-14T19:41:31.373988Z",
+     "start_time": "2025-01-14T19:41:31.186663Z"
     }
    },
-   "execution_count": 181
+   "execution_count": 33
   },
   {
    "cell_type": "markdown",
@@ -1326,18 +1326,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:20:40.049979Z",
-     "start_time": "2025-01-14T19:20:39.615874Z"
+     "end_time": "2025-01-14T19:41:32.784528Z",
+     "start_time": "2025-01-14T19:41:32.219052Z"
     }
    },
-   "execution_count": 184
+   "execution_count": 34
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "start_time": "2025-01-14T19:38:26.310076Z"
+    }
    }
   }
  ],
