--- a/project_emotions.ipynb
+++ b/project_emotions.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:47.010148Z",
-     "start_time": "2025-01-14T19:15:46.999693Z"
+     "end_time": "2025-01-14T19:35:27.745623Z",
+     "start_time": "2025-01-14T19:35:27.556414Z"
     }
    },
    "outputs": [],
@@ -37,11 +37,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:47.294326Z",
-     "start_time": "2025-01-14T19:15:47.170614Z"
+     "end_time": "2025-01-14T19:35:28.696943Z",
+     "start_time": "2025-01-14T19:35:27.746624Z"
     }
    },
    "outputs": [],
@@ -95,11 +95,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:48.703256Z",
-     "start_time": "2025-01-14T19:15:47.295327Z"
+     "end_time": "2025-01-14T19:35:29.981809Z",
+     "start_time": "2025-01-14T19:35:28.698944Z"
     }
    },
    "outputs": [],
@@ -162,11 +162,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:48.719203Z",
-     "start_time": "2025-01-14T19:15:48.704257Z"
+     "end_time": "2025-01-14T19:35:29.997573Z",
+     "start_time": "2025-01-14T19:35:29.982809Z"
     }
    },
    "outputs": [],
@@ -196,11 +196,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:48.734711Z",
-     "start_time": "2025-01-14T19:15:48.721204Z"
+     "end_time": "2025-01-14T19:35:30.013573Z",
+     "start_time": "2025-01-14T19:35:29.998574Z"
     }
    },
    "outputs": [
@@ -238,11 +238,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:48.829730Z",
-     "start_time": "2025-01-14T19:15:48.735712Z"
+     "end_time": "2025-01-14T19:35:30.203596Z",
+     "start_time": "2025-01-14T19:35:30.014574Z"
     }
    },
    "outputs": [
@@ -275,11 +275,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:48.940793Z",
-     "start_time": "2025-01-14T19:15:48.830733Z"
+     "end_time": "2025-01-14T19:35:30.299107Z",
+     "start_time": "2025-01-14T19:35:30.204596Z"
     }
    },
    "outputs": [
@@ -312,11 +312,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:49.036305Z",
-     "start_time": "2025-01-14T19:15:48.941794Z"
+     "end_time": "2025-01-14T19:35:30.393617Z",
+     "start_time": "2025-01-14T19:35:30.302108Z"
     }
    },
    "outputs": [
@@ -349,11 +349,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:49.177982Z",
-     "start_time": "2025-01-14T19:15:49.037306Z"
+     "end_time": "2025-01-14T19:35:30.535134Z",
+     "start_time": "2025-01-14T19:35:30.394618Z"
     }
    },
    "outputs": [
@@ -387,11 +387,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:49.273028Z",
-     "start_time": "2025-01-14T19:15:49.178983Z"
+     "end_time": "2025-01-14T19:35:30.630613Z",
+     "start_time": "2025-01-14T19:35:30.536134Z"
     }
    },
    "outputs": [
@@ -425,11 +425,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:56.298870Z",
-     "start_time": "2025-01-14T19:15:49.277031Z"
+     "end_time": "2025-01-14T19:35:37.384905Z",
+     "start_time": "2025-01-14T19:35:30.631613Z"
     }
    },
    "outputs": [
@@ -437,7 +437,7 @@
      "data": {
       "text/plain": "(180, 4)"
      },
-     "execution_count": 101,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,11 +496,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:56.314884Z",
-     "start_time": "2025-01-14T19:15:56.299870Z"
+     "end_time": "2025-01-14T19:35:37.399804Z",
+     "start_time": "2025-01-14T19:35:37.385906Z"
     }
    },
    "outputs": [
@@ -550,11 +550,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:56.551400Z",
-     "start_time": "2025-01-14T19:15:56.315870Z"
+     "end_time": "2025-01-14T19:35:37.511317Z",
+     "start_time": "2025-01-14T19:35:37.400804Z"
     }
    },
    "outputs": [
@@ -587,11 +587,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:56.645917Z",
-     "start_time": "2025-01-14T19:15:56.552401Z"
+     "end_time": "2025-01-14T19:35:37.606827Z",
+     "start_time": "2025-01-14T19:35:37.512318Z"
     }
    },
    "outputs": [
@@ -624,11 +624,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:56.741425Z",
-     "start_time": "2025-01-14T19:15:56.646931Z"
+     "end_time": "2025-01-14T19:35:37.718338Z",
+     "start_time": "2025-01-14T19:35:37.607828Z"
     }
    },
    "outputs": [
@@ -661,11 +661,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:57.328735Z",
-     "start_time": "2025-01-14T19:15:56.742425Z"
+     "end_time": "2025-01-14T19:35:38.289206Z",
+     "start_time": "2025-01-14T19:35:37.719339Z"
     }
    },
    "outputs": [
@@ -700,11 +700,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:57.439015Z",
-     "start_time": "2025-01-14T19:15:57.329735Z"
+     "end_time": "2025-01-14T19:35:38.398720Z",
+     "start_time": "2025-01-14T19:35:38.290207Z"
     }
    },
    "outputs": [
@@ -738,11 +738,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:57.455017Z",
-     "start_time": "2025-01-14T19:15:57.440016Z"
+     "end_time": "2025-01-14T19:35:38.414721Z",
+     "start_time": "2025-01-14T19:35:38.399721Z"
     }
    },
    "outputs": [],
@@ -771,11 +771,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:58.597510Z",
-     "start_time": "2025-01-14T19:15:57.456015Z"
+     "end_time": "2025-01-14T19:35:39.558529Z",
+     "start_time": "2025-01-14T19:35:38.415721Z"
     }
    },
    "outputs": [
@@ -873,11 +873,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:15:58.644489Z",
-     "start_time": "2025-01-14T19:15:58.598511Z"
+     "end_time": "2025-01-14T19:35:39.606194Z",
+     "start_time": "2025-01-14T19:35:39.559529Z"
     }
    },
    "outputs": [
@@ -926,11 +926,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:16:18.891936Z",
-     "start_time": "2025-01-14T19:15:58.645489Z"
+     "end_time": "2025-01-14T19:35:59.953992Z",
+     "start_time": "2025-01-14T19:35:39.607195Z"
     }
    },
    "outputs": [],
@@ -991,11 +991,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:16:18.923781Z",
-     "start_time": "2025-01-14T19:16:18.892938Z"
+     "end_time": "2025-01-14T19:35:59.985543Z",
+     "start_time": "2025-01-14T19:35:59.955506Z"
     }
    },
    "outputs": [
@@ -1044,11 +1044,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:16:19.019293Z",
-     "start_time": "2025-01-14T19:16:18.924785Z"
+     "end_time": "2025-01-14T19:36:00.160211Z",
+     "start_time": "2025-01-14T19:35:59.986543Z"
     }
    },
    "outputs": [
@@ -1106,11 +1106,13 @@
     "zcr_filip = np.zeros((no_of_sentences,))\n",
     "zcr_seb = np.zeros((no_of_sentences,))\n",
     "zcr_marcin = np.zeros((no_of_sentences,))\n",
+    "zcr_prof = np.zeros((no_of_sentences,))\n",
     "\n",
     "for i in range(no_of_sentences):\n",
-    "    zcr_filip[i] = np.mean(librosa.feature.zero_crossing_rate(words_filip[i])[0])\n",
-    "    zcr_seb[i]   = np.mean(librosa.feature.zero_crossing_rate(words_seb[i])[0])\n",
-    "    zcr_marcin[i] = np.mean(librosa.feature.zero_crossing_rate(words_marcin[i])[0])\n",
+    "    zcr_filip[i] = np.mean(librosa.feature.zero_crossing_rate(sentences_filip[i])[0])\n",
+    "    zcr_seb[i]   = np.mean(librosa.feature.zero_crossing_rate(sentences_seb[i])[0])\n",
+    "    zcr_marcin[i] = np.mean(librosa.feature.zero_crossing_rate(sentences_marcin[i])[0])\n",
+    "    sentences_prof[i] = np.mean(librosa.feature.zero_crossing_rate(sentences_prof[i])[0])\n",
     "\n",
     "feature_vector = np.concatenate([zcr_filip, zcr_seb, zcr_marcin]).reshape(-1, 1)\n",
     "\n",
@@ -1133,11 +1135,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:16:45.157890Z",
-     "start_time": "2025-01-14T19:16:44.876346Z"
+     "end_time": "2025-01-14T19:37:29.800633Z",
+     "start_time": "2025-01-14T19:37:29.449607Z"
     }
    },
-   "execution_count": 122
+   "execution_count": 29
   },
   {
    "cell_type": "markdown",
@@ -1194,11 +1196,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:16:45.693501Z",
-     "start_time": "2025-01-14T19:16:45.593479Z"
+     "end_time": "2025-01-14T19:37:30.844879Z",
+     "start_time": "2025-01-14T19:37:30.743924Z"
     }
    },
-   "execution_count": 123
+   "execution_count": 30
   },
   {
    "cell_type": "markdown",
@@ -1255,11 +1257,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:16:48.224689Z",
-     "start_time": "2025-01-14T19:16:48.048593Z"
+     "end_time": "2025-01-14T19:37:35.770858Z",
+     "start_time": "2025-01-14T19:37:35.575223Z"
     }
    },
-   "execution_count": 124
+   "execution_count": 31
   },
   {
    "cell_type": "markdown",
@@ -1316,19 +1318,24 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2025-01-14T19:17:00.691466Z",
-     "start_time": "2025-01-14T19:17:00.414059Z"
+     "end_time": "2025-01-14T19:37:36.800947Z",
+     "start_time": "2025-01-14T19:37:36.483979Z"
     }
    },
-   "execution_count": 127
+   "execution_count": 32
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [],
    "metadata": {
-    "collapsed": false
-   }
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2025-01-14T19:37:39.826064Z",
+     "start_time": "2025-01-14T19:37:39.817065Z"
+    }
+   },
+   "execution_count": 32
   }
  ],
  "metadata": {
