--- a/chroma_features_words.ipynb
+++ b/chroma_features_words.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
        "Text(0.5, 1.0, 'Chroma VQT')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -670,27 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[]"
-      ]
-     },
-     "execution_count": 71,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "acc"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -733,14 +713,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Chroma: stft\n",
+      "Chroma: CENS\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           F       0.94      0.89      0.91        18\n",
@@ -769,7 +749,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Chroma: stft\n",
+      "Chroma: CENS\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           F       1.00      0.83      0.91        18\n",
@@ -798,7 +778,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Chroma: stft\n",
+      "Chroma: CENS\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "           F       0.94      0.89      0.91        18\n",
@@ -832,7 +812,7 @@
    ],
    "source": [
     "for acc in accuracies[:3]:\n",
-    "    print(f\"Chroma: {acc['chroma_name']}\")\n",
+    "    print(f\"Chroma: CENS\")\n",
     "    print(acc[\"classification_report\"])\n",
     "    ticks = [\"Filip\",\"Marcin\",\"Sebastian\", \"Professor\"]\n",
     "    \n",
@@ -844,6 +824,13 @@
     "    plt.show()\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
